using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Tags : MonoBehaviour
{
    public const string Jogador = "Jogador";
    public const string Atacando = "Atacando";
    public const string Movendo = "Movendo";
    public const string Morrer = "Morrer";
    public const string Fire1 = "Fire1";
    public const string SampleScene = "SampleScene";
    public const string Horizontal = "Horizontal";
    public const string Vertical = "Vertical";
    public const string TempoMaximo = "TempoMaximo";
    public const string Inimigo = "Inimigo";
    public const string ChefeDeFase = "ChefeDeFase";
}
